Reduce JRE to 17
Closes #9